crates/runtime/tests/snapshots/literals__dict_expr_keys.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
{["a"]:0, ["b"]:1, ["c"]:2}

# Result (success):
{"a": 0, "b": 1, "c": 2}

# Stdout:

