crates/runtime/tests/snapshots/literals__false.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
false

# Result (success):
false

# Stdout:

