crates/runtime/tests/snapshots/literals__float_pi_n_exp.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
3.14e-3

# Result (success):
0.00314

# Stdout:

