crates/runtime/tests/snapshots/literals__list.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
[0, 1, 2]

# Result (success):
[0, 1, 2]

# Stdout:

