crates/runtime/tests/snapshots/literals__none.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
none

# Result (success):
none

# Stdout:

