crates/runtime/tests/snapshots/literals__true.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
true

# Result (success):
true

# Stdout:

